feat: Enhance project setup and styling
Introduces several improvements:
- Updates `package.json` with new dependencies like `canvas-confetti` and dev dependencies for `autoprefixer`, `postcss`, and `tailwindcss`.
- Refactors `index.html` to streamline CSS, improve background styling for a glassmorphism effect, and add scrollbar styling.
- Updates `metadata.json` with a more concise application name and short name.
- Enhances `App.tsx` by trimming student names and adding them to a department-specific list for future suggestions, improving data integrity.
- Refines the UI and styling in `components/Login.tsx` for a more polished glassmorphism effect and improved accessibility.
- Updates `components/AdminDashboard.tsx` with a type assertion for correct mapping of department toppers.
- Adjusts `tsconfig.json` for better type checking and project configuration.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
     <style>
       body {
         font-family: 'Plus Jakarta Sans', sans-serif;
-        background: 
-          linear-gradient(rgba(15, 23, 42, 0.85), rgba(15, 23, 42, 0.95)),
+        margin: 0;
+        padding: 0;
+        background-color: #0f172a;
+        /* Balanced gradient overlay to allow the background image to shine through */
+        background-image: 
+          linear-gradient(rgba(15, 23, 42, 0.7), rgba(15, 23, 42, 0.9)),
           url('https://lh3.googleusercontent.com/d/1ZphFJGD2jgoB-7r1pGnrbp-S2LiajZeu');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
+        background-repeat: no-repeat;
         min-height: 100vh;
         color: white;
       }
@@ -46,6 +51,16 @@
       }
       input, select {
         color-scheme: dark;
+      }
+      ::-webkit-scrollbar {
+        width: 6px;
+      }
+      ::-webkit-scrollbar-track {
+        background: rgba(0,0,0,0.1);
+      }
+      ::-webkit-scrollbar-thumb {
+        background: rgba(255,255,255,0.1);
+        border-radius: 10px;
       }
     </style>
   <script type="importmap">
